2002-07-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-scheme.el, mi-guile.el: New file.

	* mi-gauche.el: Reimplemented.

	* mi-fontify.el (mode-info-fontify-keywords): Relaxed.
	(retry-japanese-node-name): New advice.

2002-07-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-version): Release 0.1.1.
	(mode-info-class-alist): Add `gauche'.
	(mode-info-available-classes): New internal variable.
	(mode-info-read-class-name): Refer the above.

	* mi-index.el (mode-info-make-all-indices): Refer
	`mode-info-available-classes'.
	(mode-info-index-node-regexp): New constant.
	(make-index-file): Refer the above.
	(mode-info-index-entry-regexp): Relaxed.

	* mi-gauche.el: New file.

2002-07-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-index.el (mode-info-dump-symbols): Write `indexer-version'.

	* mode-info.el (mode-info-indexer-version): New macro.
	(load-index): Set `indexer-version'.

	* mi-config.el (mode-info-key-or-menu-binding): Export to
	mi-util.el.

	* mi-util.el (mode-info-key-or-menu-binding): Import from
	mi-config.el.

2002-07-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release 0.1.

	* mi-fontify.el (mode-info-fontify-node): Make info buffer as
	unmodified at the end of fontify process.

	* mi-util.el (line-beginning-position): Defined to avoid
	byte-compile warning in XEmacs.

	* mi-emacs.el (toplevel): Require `mi-config'.
	(function-document, variable-document): Use
	`mode-info-with-help-buffer'.
	(mode-info-emacs-add-function-button): Use
	`mode-info-elisp-insert-button'.
	(mode-info-emacs-add-variable-button): Ditto.

	* mi-elisp.el (toplevel): Require `mi-config'.
	(function-document, variable-document): Use
	`mode-info-with-help-buffer'.
	(mode-info-elisp-insert-button): New function.
	(mode-info-elisp-add-function-button): Use the above function.
	(mode-info-elisp-add-variable-button): Ditto.
	(mode-info-elisp-info-ref): New function.

	* mi-config.el (toplevel): Add autoload for